# goshadertoy

./: .gitignore  Dockerfile  GamescopeBuild.md  Notes.md  README.md  go.mod  go.sum  shadertoyapi.go
api/: rawrequest.go  shadertoyapi.go
arcana/: arcana_darwin.go  arcana_linux.go  audioprobe_darwin.go  audioprobe_linux.go  libs.go  probe.go
audio/: base.go  device.go  ffmpeg.go  ffmpegbase.go  ffmpegdevice.go  ffmpegfile.go  microphone.go  player.go  shaderdevice.go  sharedbuffer.go  tee.go  util.go
cmd/: main.go
encoder/: encoder.go
gamescope/: GamescopeBuild.md  debug-on-tty2.sh  main.go  tty-runner.sh
glfw/v3.3/glfw/: window.go
glfw/v3.3/glfw/glfw/src/: nsgl_context.m
glfwcontext/: context.go
graphics/: context.go
headless/: egl_generic.go  egl_linux.go
inputs/: buffer.go  channels.go  cubemap.go  ichannel.go  image.go  mic.go  util.go  volume.go
options/: options.go
renderer/: offscreen.go  options.go  protocol.h  renderer.go  renderer_generic.go  renderer_linux.go  renderpass.go  scene.go  sound_renderer.go
scripts/: build-all.sh  build-deps.sh  build-ffmpeg-general.sh  build-ffmpeg.sh  build-macos.sh  build_ffmpeg_arcana.sh  build_shmframe.sh  loader.toml
semaphore/: semaphore.go  semaphore_unix.go  semaphore_windows.go
shader/: shader.go
sharedmemory/: shmi.go  shmi_darwin.go  shmi_linux.go  shmi_windows.go
shmframe/: CMakeLists.txt  arcana.md  arcana_loader.c  protocol.h  shm_muxer.c  shmframe.c  shmframe.h
shmux_example/: __debug_bin3400908912  main.go
translator/: translator.go
